--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.3",
     "gsap": "^3.13.0",
