--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+package-lock.json
+.env
 node_modules
 dist
 dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
