--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
-    "@react-three/drei": "^10.5.0",
-    "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
@@ -21,8 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.34.0",
-    "react-router-dom": "^7.6.3",
-    "three": "^0.178.0"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
