--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
