--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "ng": "^0.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.34.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
