--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "ng": "^0.0.0",
     "react": "^19.1.0",
