feat: implement real-time messaging with Mercure and agent map integration
- Add bidirectional chat functionality for agents and clients
- Integrate Mercure for real-time message delivery
- Implement agent map view
- Support responsive design for mobile and desktop interfaces

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:8000/api
+VITE_MERCURE_URL=http://localhost:3000/.well-known/mercure
 VITE_ENV=development
 VITE_DEBUG=true
