--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
-    "axios": "^1.10.0",
+    "axios": "1.11.0",
     "framer-motion": "^12.23.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
