--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "axios": "1.11.0",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "ng": "^0.0.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.5.0",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.34.0",
     "react-hot-toast": "^2.5.2",
